[project]
name = "zelador"
version = "0.1.0"
description = "Ferramenta CLI para gerenciar e fazer deploy de aplicações em Docker Stack"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.1",
    "typer>=0.21.1",
    "requests>=2.31.0",
]

[project.scripts]
zelador = "main:app"
